feat: добавлены приоритеты задач, проверка пересечений, сохранение и загрузка с поддержкой duration/startTime. Методы поиска возвращают Optional. Покрытие ключевых кейсов тестами.